--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/0fd96ff58f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-    <div>
-        <h1>1</h1>
+    <div class="main-class main-class2" id="main-id">
+        <h1 class="h1-1">1</h1>
+        <h1 class="h2-2">2</h1>
+        <form action="" method="get">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+        </form>
     </div>
     <div>
         <h1>heading1</h1>
@@ -16,9 +22,13 @@
         <img src="https://picsum.photos/200/300" alt="">
         <hr>
         <ul>
-            <li>1</li>
+            <li>1<i class="fa-solid fa-dog"></i></li>
+            
             <li><a href="https://facebook.com">link to facebook</a></li>
             <li>1</li>
+
+
+            git add 
             <li>1</li>
             <li>1</li>
         </ul>
@@ -29,7 +39,7 @@
             <li>1</li>
             <li>1</li>
         </ol>
-
+        git add ten file
     </div>
 </body>
 </html>
